# IIoT-2022.1

./: CMakeLists.txt  README.md
components/app_tasks/: CMakeLists.txt  accel_task.c  button_task.c  mqtt_task.c  oled_task.c  temp_task.c
components/app_tasks/include/: app_tasks.h
components/ds18b20/: CMakeLists.txt  ds18b20.c
components/ds18b20/include/: ds18b20.h
components/mpu6050/: mpu6050.c
components/mpu6050/include/: mpu6050.h
components/onewire_bus/: CMakeLists.txt  onewire_bus.c  onewire_bus_rmt.c
components/onewire_bus/include/: onewire_bus.h  onewire_bus_rmt.h
components/ssd1306/: CMakeLists.txt  ssd1306_i2c.c  ssd1306_spi.c
components/utils/: utils.c
components/utils/include/: utils.h
main/: CMakeLists.txt  accel_task.c  accel_task.h  main.c  mpu6050_task.c  mpu6050_task.h
serverapp/: app.js  package-lock.json
